file(GLOB HTTP_SERVER_SOURCES *.cpp)
source_group("Source Files" FILES ${HTTP_SERVER_SOURCES})

file(GLOB HTTP_SERVER_HEADERS *.hpp)
source_group("Header Files" FILES ${HTTP_SERVER_HEADERS})

FIND_PACKAGE(Boost COMPONENTS system thread filesystem REQUIRED)
IF(Boost_FOUND)
  INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
  ADD_DEFINITIONS("-DHAS_BOOST")
ENDIF(Boost_FOUND)

ADD_LIBRARY(http_server ${HTTP_SERVER_SOURCES} ${HTTP_SERVER_HEADERS})
